log_output/manifests/pingpong/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: tomjtoth/devops-with-kubernetes:pingpong-4.1
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
