log_output/manifests/pingpong/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: pingpong-ing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pingpong-svc
                port:
                  number: 55555
